Chapter 3 — Listing 3.2: CompositionOverInheritance.java Demonstrates: composition with functional interfaces to replace fragile inheritance